Ajout de l'authentification du mulder pour gérer les fichiers utilisateur et modification du swagger et ajout des SECRET env
