# backend/controllers/books.js
@@ -2,12 +2,23 @@ const Book = require("../models/Book") // Import du schéma Book depuis le chemi
 
 // Middleware pour la création d'un livre
 exports.createBook = (req, res, next) => {
-    const book = new Book({ ...req.body })
+    const bookObject = JSON.parse(req.body.book)
+    delete bookObject._id
+    delete bookObject.userId
+    const book = new Book({
+        ...bookObject,
+        userId: req.auth.userId,
+        imageUrl: `${req.protocol}://${req.get("host")}/images/${
+            req.file.filename
+        }`,
+    })
+
     book.save()
         .then(() => {
             res.status(201).json({ message: "Objet créé !", objet: req.body })
         })
         .catch((error) => {
+            console.log(error)
             res.status(400).json({ error })
         })
 }
